# modern-haskell-web

./: .gitignore  .gitmodules  LICENSE  README.md  buildBackend.sh  buildFrontend.sh
app/: devel.cfg.example
app/snaplets/heist/: _base.tpl  _index.tpl  _login.tpl  _new_user.tpl  index.tpl  login.tpl  new_user.tpl
app/static/: style.css
backend/: cabal.project  initSandbox.sh  modern-haskell-web.cabal
backend/src/: GroundhogAuth.hs  Main.hs
backend/src/TemplateApplication/Types/: DB.hs
backend/test/: TestSuite.hs
frontend/: build.sh  modern-haskell-web-gui.cabal  nix.sh  platform.nix
frontend/src/: FrontendState.hs  GuiMain.hs
shared/src/: WsApi.hs
