name:                modern-haskell-web
version:             0.1.0.0
synopsis:            Modern Haskell Web Application Template
description:         Build web apps the Haskell way
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable modern-haskell-web
  hs-source-dirs: src src-shared
  main-is: Main.hs
  build-depends:
    aeson == 0.11.2.0,
    bytestring,
    clientsession,
    configurator,
    containers,
    errors,
    groundhog,
    groundhog-postgresql,
    groundhog-th,
    heist,
    lens,
    map-syntax,
    monad-control,
    monad-logger,
    mtl,
    mwc-random,
    readable,
    resource-pool,
    rng-utils,
    snap,
    snap-core,
    string-conv,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    websockets,
    websockets-snap
  if impl(ghc >= 7.8)
    build-depends: base >= 4.7 && < 5
  else
    build-depends: base >=4.6 && <4.7
  ghc-options: -Wall
  default-language:    Haskell2010

Test-suite testsuite
  type: exitcode-stdio-1.0
  hs-source-dirs: src src-shared test
  main-is: TestSuite.hs
  build-depends:
    QuickCheck,
    aeson,
    lens,
    bytestring,
    containers,
    errors,
    hspec,
    mtl,
    random,
    rng-utils,
    snap,
    snap-core,
    text,
    time,
    transformers
  if impl(ghc >= 7.8)
    build-depends: base >= 4.7 && < 5
  else
    build-depends: base >=4.6 && <4.7
  ghc-options: -O2
  default-language:    Haskell2010
