name:                modern-haskell-web-gui
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable modern-haskell-web-gui
  hs-source-dirs: src, src-shared
  main-is:             
    GuiMain.hs

  build-depends:       
      aeson
    , attoparsec
    , base
    , bifunctors
    , bytestring
    , containers
    , data-default
    , dependent-map
    , dependent-sum
    , dlist
    , errors
    , ghcjs-dom
    , http-types
    , lens
    , map-syntax
    , mtl
    , random
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , reflex-dom-semui
    , safe
    , safecopy
    , semigroups
    , split
    , string-conv
    , text
    , these
    , time
    , transformers
    , unordered-containers
    , vector
  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  if impl(ghcjs)
     build-depends: ghcjs-base
     cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000

  default-language:    Haskell2010

